objects/Partner_LeadContact__c.object
<CustomObject>
    <description>One record for each Partner relationship with a Lead or Contact, where that relationship exists.  Primarily used to keep track of the Status (Captured, Engaged, Opportunity, Recycle, etc.).</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of associated Contact (If exists)</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner LeadContacts</relationshipLabel>
        <relationshipName>Partner_LeadContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of associated Lead (If exists)</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Partner LeadContacts</relationshipLabel>
        <relationshipName>Partner_LeadContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Id of Partner Account working with the Lead or Contact.</description>
        <label>Partner Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or is not a Partner account.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Enterprise - Business Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner LeadContacts</relationshipLabel>
        <relationshipName>Partner_LeadContacts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recycle_Reason__c</fullName>
        <description>Reason that the Status was set to Recycle.</description>
        <inlineHelpText>Reason that the Status was set to Recycle.</inlineHelpText>
        <label>Recycle Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Lead or Contact in relation to the Partner Account.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Captured</fullName>
                    <default>true</default>
                    <label>Captured</label>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                </value>
                <value>
                    <fullName>Recycled</fullName>
                </value>
                <value>
                    <fullName>Deal/Opportunity Created</fullName>
                </value>
                <value>
                    <fullName>Deal Registration</fullName>
                    <isActive>false</isActive>
                    <label>Deal Registration</label>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                    <isActive>false</isActive>
                    <label>Opportunity</label>
                </value>
                <value>
                    <fullName>Recycle</fullName>
                    <isActive>false</isActive>
                    <label>Recycle</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Partner LeadContact</label>
    <nameField>
        <displayFormat>PLC-{000000}</displayFormat>
        <label>Partner LeadContact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner LeadContacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Partner_LeadContact_Recycle_Reason</fullName>
        <active>true</active>
        <description>Requires Recycle Reason when Status is set to Recycle.</description>
        <errorConditionFormula>AND(
 ISPICKVAL( Status__c , &apos;Recycle&apos;) ,
 ISBLANK( Recycle_Reason__c ) 
)</errorConditionFormula>
        <errorDisplayField>Recycle_Reason__c</errorDisplayField>
        <errorMessage>Please include a recycle reason when setting the status to recycle.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Partner_LeadContact_Required_LeadContact</fullName>
        <active>true</active>
        <description>Requires either Lead or Contact to be populated.</description>
        <errorConditionFormula>AND(
 ISBLANK( Lead__c ) ,
 ISBLANK( Contact__c ) 
)</errorConditionFormula>
        <errorMessage>Please include a contact or lead.</errorMessage>
    </validationRules>
</CustomObject>